# pyterrier_services

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
,github/workflows/: test.yml
.github/workflows/: style.yml
pyterrier_services/: __init__.py  core.py  pinecone.py  semantic_scholar.py
pyterrier_services/pt_docs/: index.rst  pinecone.rst  semantic-scholar.rst
pyterrier_services/pt_meta/: index.rst  semantic-scholar.rst
tests/: test_semantic_scholar.py
