[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyterrier-services"
description = "PyTerrier components for API Services"
readme = "README.md"
authors = [
  {name = "Sean MacAvaney", email = "sean.macavaney@glasgow.ac.uk"},
]
maintainers = [
  {name = "Sean MacAvaney", email = "sean.macavaney@glasgow.ac.uk"},
]
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python",
  "Operating System :: OS Independent",
  "Topic :: Text Processing",
  "Topic :: Text Processing :: Indexing",
  "License :: OSI Approved :: MIT License",
]
dynamic = ["version", "dependencies"]

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.setuptools.dynamic]
version = {attr = "pyterrier_services.__version__"}
dependencies = {file = ["requirements.txt"]}

[project.urls]
Repository = "https://github.com/seanmacavaney/pyterrier-services"
"Bug Tracker" = "https://github.com/seanmacavaney/pyterrier-services/issues"
